refactor addTimelineElement API to return inserted timelineElementId
